# uba

./: .gitignore  Cargo.toml  README.md  manifest.yaml
.cargo/: config.toml
src/: main.rs
uba/: Cargo.toml
uba-android/: Cargo.toml  build.rs
uba-android/src/: lib.rs
uba-core/: Cargo.toml
uba-core/src/: lib.rs  log.rs  persistence.rs
uba-desktop/: Cargo.toml
uba-desktop/src/: main.rs
uba-entry/uba-android/: Cargo.toml  build.rs
uba-entry/uba-android/src/: lib.rs
uba-entry/uba-desktop/: Cargo.toml  build.rs
uba-entry/uba-desktop/src/: main.rs
uba-entry/uba-ios/: Cargo.toml  build.py  build.rs  project.yml
uba-entry/uba-ios/src/: main.rs
uba-entry/uba-web/: Cargo.toml  index.html
uba-entry/uba-web/src/: lib.rs
uba-ios/: build.py  project.yml
uba/src/: controller.rs  lib.rs  main.rs  model.rs  repository.rs
uba/src/controller/: transaction_controller.rs
uba/src/model/: balance_model.rs
uba/src/repository/: transaction_repository.rs
ui/: app.slint
xcodegen/: Cargo.toml
xcodegen/src/: main.rs
