[package]
name = "uba"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "uba"
path = "src/main.rs"

[lib]
path = "src/main.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
slint = { version = "1.16", features = ["backend-android-activity-06"] }

[build-dependencies]
slint-build = "1.16"

[profile.release]
codegen-units = 1
lto = true
