[workspace]
resolver = "2"
members = [
    "uba-core",
    "uba-entry/uba-desktop",
    "uba-entry/uba-android",
    "uba-entry/uba-ios",
    "uba-entry/uba-web",
    "uba",
]

default-members = ["uba-desktop"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
strip = true
