[workspace]
resolver = "2"
members = [
    "uba-entry/uba-desktop",
    "uba-entry/uba-android",
    "uba-entry/uba-ios",
    "uba-entry/uba-web",
    "uba",
    "uba-core",
]

default-members = ["uba-entry/uba-desktop"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
strip = true
