[package]
name = "uba-android"
version.workspace = true
edition.workspace = true
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
uba-core = { path = "../uba-core" }
slint = { version = "1.16", features = ["backend-android-activity-06"] }

[build-dependencies]
slint-build = "1.16"

[features]
# Set to ON by default using `cargo android` from .cargo/config.toml. This is so
# when building through xbuild, the feature will be set to off, allowing the
# build script to skip checking (see build.rs)
build-checks = []
