[package]
name = "uba"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
uba-core = { path = "../uba-core" }
slint = { version = "1.16", features = ["backend-android-activity-06"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
toml = "1.1.2"

[build-dependencies]
slint-build = "1.16"
