[package]
name = "uba-web"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
uba-core = { path = "../../uba-core" }
uba = { path = "../../uba" }
wasm-bindgen = { version = "0.2" }
